--- a/Task 2.html
+++ b/Task 2.html
@@ -1,79 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Task 2</title>
+    <meta charset="utf-8">
+    <title>Task 2</title>
 </head>
 <body>
-<center>List</center>
-<center><table border="1">
-<tr>
-	<th>Unordered list</th>
-	<th>Ordered list</th>
-	<th> Definition list</th>
-</tr>
-<tr>
-<td>
-	<ul>
-		<li>Lorem ipsum dolor sit amet</li>
-		<li>Consectetur adipiscing elit</li>
-		<li>Integer molestie lorem at massa</li>
-		<li>Facilisis in pretium nisl aliquet</li>
-		<li>Nulla volutpat aliquam velit</li>
-			<ul style="list-style-type:disc">
-				<li>Phasellus iaculis neque</li>
-				<li>Purus sodales ultricies</li>
-				<li>Vestibulum laoreet porttitor sem</li>
-				<li>Ac tristique libero volutpat at</li>
-				<li>Nulla volutpat aliquam velit</li>
-					<ul style="list-style-type:disc">
-						<li>Phasellus iaculis neque</li>
-						<li>Purus sodales ultricies</li>
-						<li>Vestibulum laoreet porttitor sem</li>
-						<li>Ac tristique libero volutpat at</li>
-					</ul>
-			</ul>
-		<li>Faucibus porta lacus fringilla vel</li>
-		<li>Aenean sit amet erat nunc</li>
-		<li>Eget porttitor lorem</li>
-	</ul>
-</td>
-<td>
-	<ol type="1">
-		<li value="20">Lorem ipsum dolor sit amet</li>
-		<li>Consectetur adipiscing elit</li>
-		<li>Integer molestie lorem at massa</li>
-		<li>Facilisis in pretium nisl aliquet</li>
-		<li>Nulla volutpat aliquam velit</li>
-			<ol type="a">
-				<li>Phasellus iaculis neque</li>
-				<li>Purus sodales ultricies</li>
-				<li>Vestibulum laoreet porttitor sem</li>
-				<li>Ac tristique libero volutpat at</li>
-				<li>Nulla volutpat aliquam velit</li>
-					<ol type="I">
-						<li>Phasellus iaculis neque</li>
-						<li>Purus sodales ultricies</li>
-						<li>Vestibulum laoreet porttitor sem</li>
-						<li>Ac tristique libero volutpat at</li>
-					</ol> 	
-			</ol> 
-		<li>Faucibus porta lacus fringilla vel</li>
-		<li>Aenean sit amet erat nunc</li>
-		<li>Eget porttitor lorem</li>
-	</ol> 
-</td>
-<td>
-	<dt>Lorem:</dt>
-	<dd>Lorem ipsum dolor sit amet</dd>
-	<dt>Consectetur:</dt>
-	<dd>Consectetur adipiscing elit</dd>
-	<dt>Integer:</dt>
-	<dd>Integer molestie lorem at massa</dd>
-	<dt>Facilisis:</dt>
-	<dd>Facilisis in pretium nisl aliquet</dd>
-</td>
-</center>
-</tr>
+
+<table border="1">
+    <caption>List</caption>
+        <thead>
+            <tr>
+                <th>Unordered list</th>
+                <th>Ordered list</th>
+                <th> Definition list</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>
+                    <ul>
+                        <li>Lorem ipsum dolor sit amet</li>
+                        <li>Consectetur adipiscing elit</li>
+                        <li>Integer molestie lorem at massa</li>
+                        <li>Facilisis in pretium nisl aliquet</li>
+                        <li>Nulla volutpat aliquam velit
+                            <ul style="list-style-type:disc">
+                                <li>Phasellus iaculis neque</li>
+                                <li>Purus sodales ultricies</li>
+                                <li>Vestibulum laoreet porttitor sem</li>
+                                <li>Ac tristique libero volutpat at</li>
+                                <li>Nulla volutpat aliquam velit
+                                    <ul style="list-style-type:disc">
+                                        <li>Phasellus iaculis neque</li>
+                                        <li>Purus sodales ultricies</li>
+                                        <li>Vestibulum laoreet porttitor sem</li>
+                                        <li>Ac tristique libero volutpat at</li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>Faucibus porta lacus fringilla vel</li>
+                        <li>Aenean sit amet erat nunc</li>
+                        <li>Eget porttitor lorem</li>
+                    </ul>
+                </td>
+                <td>
+                    <ol type="1">
+                        <li value="20">Lorem ipsum dolor sit amet</li>
+                        <li>Consectetur adipiscing elit</li>
+                        <li>Integer molestie lorem at massa</li>
+                        <li>Facilisis in pretium nisl aliquet</li>
+                        <li>Nulla volutpat aliquam velit
+                            <ol type="a">
+                                <li>Phasellus iaculis neque</li>
+                                <li>Purus sodales ultricies</li>
+                                <li>Vestibulum laoreet porttitor sem</li>
+                                <li>Ac tristique libero volutpat at</li>
+                                <li>Nulla volutpat aliquam velit
+                                    <ol type="I">
+                                        <li>Phasellus iaculis neque</li>
+                                        <li>Purus sodales ultricies</li>
+                                        <li>Vestibulum laoreet porttitor sem</li>
+                                        <li>Ac tristique libero volutpat at</li>
+                                    </ol>
+                                </li>
+                            </ol>
+                        </li>
+                        <li>Faucibus porta lacus fringilla vel</li>
+                        <li>Aenean sit amet erat nunc</li>
+                        <li>Eget porttitor lorem</li>
+                    </ol>
+                </td>
+                <td>
+                    <dl>
+                        <dt>Lorem:</dt>
+                        <dd>Lorem ipsum dolor sit amet</dd>
+                        <dt>Consectetur:</dt>
+                        <dd>Consectetur adipiscing elit</dd>
+                        <dt>Integer:</dt>
+                        <dd>Integer molestie lorem at massa</dd>
+                        <dt>Facilisis:</dt>
+                        <dd>Facilisis in pretium nisl aliquet</dd>
+                    </dl>
+                </td>
+            </tr>
+        </tbody>
+</table>
 </body>
 </html>
