--- a/Task 2.html
+++ b/Task 2.html
@@ -5,75 +5,84 @@
 <title>Task 2</title>
 </head>
 <body>
-<center>List</center>
-<center><table border="1">
-<tr>
+    
+    
+<table border="1" align="center">
+    <caption>List</caption>
+<thead>
+    <tr>
 	<th>Unordered list</th>
 	<th>Ordered list</th>
 	<th> Definition list</th>
-</tr>
+    </tr>
+</thead>
+<tbody>
 <tr>
 <td>
-	<ul>
+                <ul>
 		<li>Lorem ipsum dolor sit amet</li>
 		<li>Consectetur adipiscing elit</li>
 		<li>Integer molestie lorem at massa</li>
 		<li>Facilisis in pretium nisl aliquet</li>
 		<li>Nulla volutpat aliquam velit</li>
-			<ul style="list-style-type:disc">
+                                <ul>
 				<li>Phasellus iaculis neque</li>
 				<li>Purus sodales ultricies</li>
 				<li>Vestibulum laoreet porttitor sem</li>
 				<li>Ac tristique libero volutpat at</li>
 				<li>Nulla volutpat aliquam velit</li>
-					<ul style="list-style-type:disc">
+                                                <ul>
 						<li>Phasellus iaculis neque</li>
 						<li>Purus sodales ultricies</li>
 						<li>Vestibulum laoreet porttitor sem</li>
 						<li>Ac tristique libero volutpat at</li>
-					</ul>
-			</ul>
-		<li>Faucibus porta lacus fringilla vel</li>
+                                                </ul>
+                                </ul>
+                <li>Faucibus porta lacus fringilla vel</li>
 		<li>Aenean sit amet erat nunc</li>
 		<li>Eget porttitor lorem</li>
-	</ul>
+                </ul>
 </td>
 <td>
-	<ol type="1">
+                <ol type="1">
 		<li value="20">Lorem ipsum dolor sit amet</li>
 		<li>Consectetur adipiscing elit</li>
 		<li>Integer molestie lorem at massa</li>
 		<li>Facilisis in pretium nisl aliquet</li>
 		<li>Nulla volutpat aliquam velit</li>
-			<ol type="a">
+                                <ol type="a">
 				<li>Phasellus iaculis neque</li>
 				<li>Purus sodales ultricies</li>
 				<li>Vestibulum laoreet porttitor sem</li>
 				<li>Ac tristique libero volutpat at</li>
 				<li>Nulla volutpat aliquam velit</li>
-					<ol type="I">
+                                                <ol type="I">
 						<li>Phasellus iaculis neque</li>
 						<li>Purus sodales ultricies</li>
 						<li>Vestibulum laoreet porttitor sem</li>
 						<li>Ac tristique libero volutpat at</li>
-					</ol> 	
-			</ol> 
+                                                </ol> 	
+                                </ol> 
 		<li>Faucibus porta lacus fringilla vel</li>
 		<li>Aenean sit amet erat nunc</li>
 		<li>Eget porttitor lorem</li>
-	</ol> 
+                </ol> 
 </td>
-<td>
+    <td>
+        <dl>
 	<dt>Lorem:</dt>
-	<dd>Lorem ipsum dolor sit amet</dd>
+            <dd>Lorem ipsum dolor sit amet</dd>
 	<dt>Consectetur:</dt>
-	<dd>Consectetur adipiscing elit</dd>
+            <dd>Consectetur adipiscing elit</dd>
 	<dt>Integer:</dt>
-	<dd>Integer molestie lorem at massa</dd>
+            <dd>Integer molestie lorem at massa</dd>
 	<dt>Facilisis:</dt>
-	<dd>Facilisis in pretium nisl aliquet</dd>
-</td>
-</center>
+            <dd>Facilisis in pretium nisl aliquet</dd>
+        </dl>
+        </td>
 </tr>
+</tbody>
+</table>
+
 </body>
 </html>
